# H-Robix

./: README.md  caca.txt
h_robix_control/: CMakeLists.txt  package.xml
h_robix_control/launch/: hexapod_motor_driver.launch  hexapod_teleoperation.launch
h_robix_control/msg/: SetGroupMotorData.msg
h_robix_control/src/: buttons_handler.py  conf_motors.py  dinamixel_motor_controllers.cpp  pub_crr_motors_data.py
h_robix_control/src/tests/: update_pos_c.py
h_robix_control/srv/: GetGroupMotorData.srv
h_robix_description/: CMakeLists.txt  package.xml
h_robix_description/launch/: hexapod_gazebo.launch  rviz_javi.launch  rviz_visualizer.launch
h_robix_description/meshes/: base_link.stl  coxa_link.stl
h_robix_description/urdf/: h_robix.urdf.xacro
h_robix_gazebo/: CMakeLists.txt  package.xml
h_robix_gazebo/config/: hexapod_control.yaml
h_robix_gazebo/launch/: hexapod_gazebo.launch
h_robix_movement/: CMakeLists.txt  package.xml
h_robix_movement/kinematics/: kinematics_robotics_toolbox.py
h_robix_movement/src/: hexapod_class.py  test_rviz.py
h_robix_movement/tf_examples/: tf_listener.py
hexapod_javi_sim/: CMakeLists.txt  hexapod_network.sh  package.xml
hexapod_javi_sim/config/: hexapod_control.yaml  joints_ur10e.yaml
hexapod_javi_sim/javi_controllers/src/: initialize_hexapod.py  read_and_pub_pos.py
hexapod_javi_sim/javi_controllers/src/tests/: read_write_coxa.py  read_write_node.py  test_pub_tibia.py  update_joint_states.py  update_pos_topics.py
hexapod_javi_sim/launch/: config.rviz  hexapod_gazebo.launch  rviz_javi.launch  spawn_ur10e.launch
hexapod_javi_sim/meshes/: femur_link.stl  tibia_link.stl
hexapod_javi_sim/movement_hexapod/src/: hexapod_class.py
hexapod_javi_sim/movement_hexapod/tf_examples/: broadcast_tf.py  create_tf.py
hexapod_javi_sim/urdf/: javi.urdf.xacro
javi_controllers/: CMakeLists.txt  package.xml
javi_controllers/launch/: hexapod_motor_driver.launch
javi_controllers/msg/: ButtonData.msg
javi_controllers/src/: buttons_handler.py  conf_motors.py  dinamixel_motor_controllers.cpp  pub_crr_motors_data.py  read_and_pub_pos.py
javi_controllers/src/tests/: test.py  test_gazeboo.py  update_pos_py.py
movement_hexapod/src/: hexapod_class.py  kinematics copy.py  kinematics.py
movement_hexapod/test_kinematics/: kinematics.py
movement_hexapod/tf_examples/: create_tf.py  tf_listening.py
